[workspace]
resolver = "2"
members = [
    "compiler/zrc",
    "compiler/zrc_cli",
    "compiler/zrc_utils",
    "compiler/zrc_diagnostics",
    "compiler/zrc_parser",
    "compiler/zrc_typeck",
    "compiler/zrc_codegen",
    "compiler/zrc_preprocessor",
    "tools/zircop",
    "tools/zrcat",
]

[profile.release]
lto = true
opt-level = 3
debug = false
codegen-units = 1

# See https://insta.rs/docs/quickstart/#optional-faster-runs
[profile.dev.package]
insta.opt-level = 3
