[package]
name = "zrc"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
zrc_parser = { version = "0.1.0", path = "../zrc_parser" }
zrc_typeck = { version = "0.1.0", path = "../zrc_typeck" }
zrc_codegen = { version = "0.1.0", path = "../zrc_codegen" }
zrc_preprocessor = { version = "0.1.0", path = "../zrc_preprocessor" }
anyhow = "1.0.82"
zrc_diagnostics = { version = "0.1.0", path = "../zrc_diagnostics" }
clap = { version = "4.5.4", features = ["derive"] }
shadow-rs = "0.36.0"
derive_more = { version = "2.0.1", features = ["display"] }
mimalloc = "0.1.48"

[build-dependencies]
shadow-rs = "0.36.0"
