[package]
name = "zrc"
version = "0.1.0"
edition = "2024"

[dependencies]
zrc_parser = { version = "0.1.0", path = "../zrc_parser" }
zrc_preprocessor = { version = "0.1.0", path = "../zrc_preprocessor" }
zrc_utils = { version = "0.1.0", path = "../zrc_utils" }
zrc_typeck = { version = "0.1.0", path = "../zrc_typeck" }
zrc_codegen = { version = "0.1.0", path = "../zrc_codegen" }
zrc_diagnostics = { version = "0.1.0", path = "../zrc_diagnostics" }
