[package]
name = "zrc"
version = "0.1.0"
edition = "2024"

[dependencies]
zrc_parser = { path = "../zrc_parser" }
zrc_preprocessor = { path = "../zrc_preprocessor" }
zrc_utils = { path = "../zrc_utils" }
zrc_typeck = { path = "../zrc_typeck" }
zrc_codegen = { path = "../zrc_codegen" }
zrc_diagnostics = { path = "../zrc_diagnostics" }
