[package]
name = "zrc_codegen"
version = "0.1.0"
edition = "2024"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
inkwell = { git = "https://github.com/TheDan64/inkwell", version = "0.6.0", features = ["llvm20-1", "llvm20-1-prefer-static"] }
zrc_typeck = { version = "0.1.0", path = "../zrc_typeck" }
zrc_utils = { version = "0.1.0", path = "../zrc_utils" }
indexmap = "2.2.6"

[dev-dependencies]
indoc = "2.0.5"
insta = { version = "1.36.1", features = ["yaml"] }
zrc_parser = { path = "../zrc_parser" }

[build-dependencies]
cc = "1.2.41"
