[package]
name = "zrc_codegen"
version = "0.2.0"
edition = "2024"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
inkwell = { version = "0.9.0", features = ["llvm22-1", "llvm22-1-prefer-static"] }
zrc_typeck = { path = "../zrc_typeck" }
zrc_utils = { path = "../zrc_utils" }

[dev-dependencies]
indoc = "2.0.5"
insta = { version = "1.36.1", features = ["yaml"] }
zrc_parser = { path = "../zrc_parser" }
