[package]
name = "zrc_diagnostics"
version = "0.1.0"
edition = "2024"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
ariadne = "0.6.0"
derive_more = { version = "2.0.1", features = ["display"] }
thiserror = "2.0.0"
zrc_utils = { version = "0.1.0", path = "../zrc_utils" }
