[package]
name = "zrc_parser"
version = "0.1.0"
edition = "2024"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
derive_more = { version = "2.0.1", features = ["display"] }
lalrpop-util = { version = "0.22.0" }
logos = "0.16.0"
zrc_diagnostics = { path = "../zrc_diagnostics" }
zrc_utils = { path = "../zrc_utils" }
zrc_preprocessor = { path = "../zrc_preprocessor" }

[build-dependencies]
lalrpop = "0.22.0"

[dev-dependencies]
indoc = "2.0.5"
