[package]
name = "zrc_typeck"
version = "0.1.0"
edition = "2024"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
derive_more = { version = "2.0.1", features = ["display"] }
indexmap = "2.2.6"
zrc_diagnostics = { path = "../zrc_diagnostics" }
zrc_parser = { path = "../zrc_parser" }
zrc_utils = { path = "../zrc_utils" }
