[package]
name = "zircop"
version = "0.1.0"
edition = "2024"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
zrc_preprocessor = { version = "0.1.0", path = "../../compiler/zrc_preprocessor" }
zrc_parser = { version = "0.1.0", path = "../../compiler/zrc_parser" }
zrc_typeck = { version = "0.1.0", path = "../../compiler/zrc_typeck" }
zrc_diagnostics = { version = "0.1.0", path = "../../compiler/zrc_diagnostics" }
zrc_utils = { version = "0.1.0", path = "../../compiler/zrc_utils" }
thiserror = "2.0.17"
derive_more = { version = "2.0.1", features = ["display"] }
clap = { version = "4.5.52", features = ["derive"] }
anyhow = "1.0.100"
