[package]
name = "zircop"
version = "0.1.0"
edition = "2024"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
zrc_preprocessor = { path = "../../compiler/zrc_preprocessor" }
zrc_parser = { path = "../../compiler/zrc_parser" }
zrc_typeck = { path = "../../compiler/zrc_typeck" }
zrc_diagnostics = { path = "../../compiler/zrc_diagnostics" }
zrc_utils = { path = "../../compiler/zrc_utils" }
thiserror = "2.0.17"
derive_more = { version = "2.0.1", features = ["display"] }
clap = { version = "4.5.52", features = ["derive"] }

[dev-dependencies]
indoc = "2.0.7"
